Additional paper on MOOC accessibility.

--- a/elearning.html
+++ b/elearning.html
@@ -140,6 +140,10 @@
 
     <h2 id="lmsaccessibility">Accessibility of Online Learning Platforms and Learning Management Systems</h2>
     <ul>
+      <li>Calle-Jiménez, Tania; Sanchez-Gordon, Sandra; Luján-Mora, Sergio:
+        <a href="http://desarrolloweb.dlsi.ua.es/moocs/web-accessibility-evaluation-mooc-geographical-information-systems">Web Accessibility Evaluation of Massive Open Online Courses on Geographical Information Systems</a>,
+        Proceedings of <abbr>IEEE</abbr> Global Engineering Education Conference (EDUCON 2014), p. 680-686, Istanbul (Turkey), April 3-5 2014. <abbr>ISBN</abbr>: 978-1-4799-3190-3.
+      </li>
       <li>Iniesto, Francisco; McAndrew, Patrick; Minocha, Shailey; Coughlan, Tim:
         <a href="http://conference.oeconsortium.org/2016/presentation/the-current-state-of-accessibility-of-moocs-what-are-the-next-steps/">The current state of accessibility of MOOCs: What are the next steps?</a>,
         Open Education Global Conference, 12-14 April 2016, Kraków, Poland.
@@ -160,6 +164,10 @@
         The paper presents the accessibility of Blackboard, Desire2Learn, Moodle and Sakai.
       </li>
     </ul>
+    <!-- See also on ResearchGate:
+      * "How can we make Massive Open Online Courses (MOOC) courses suitable for deaf? " https://www.researchgate.net/post/How_can_we_make_Massive_Open_Online_Courses_MOOC_courses_suitable_for_deaf
+      * "How do blind students access MOOCs?" https://www.researchgate.net/post/How_do_blind_students_access_MOOCs 
+    -->
 
     <h2 id="moocsona11y"><abbr title="massive open online courses">MOOCs</abbr> About Accessibility</h2>
     <p>In addition to <abbr>MOOC</abbr>s on accessibility, the list below also contains 
