--- a/personas.html
+++ b/personas.html
@@ -128,6 +128,19 @@
         <i class="website">NewCircle</i>, 30.09.2014.
         (Also available on <a href="https://www.youtube.com/watch?v=G7ljzXB40hw">YouTube</a>.)
       </li>
+      <li>Long, Frank:
+        <a href="http://www.frontend.com/the-effectiveness-of-using-personas-in-product-design.html">Real or Imaginary: The effectiveness of using personas in product design</a>,
+        <i class="website">frontend.com</i>, 2009.<!-- @@reread @@toPDF -->
+      </li>
+      <li>Young, Indi:
+        <a href="https://medium.com/@indiyoung/describing-personas-af992e3fc527">Describing Personas</a>,
+        15 March 2016.<!-- @@reread -->
+      </li>
+      <li>Vanderheiden, Gregg:
+        <a href="http://lists.w3.org/Archives/Public/w3c-wai-ig/2016AprJun/0321.html">Re: Creating personas for <abbr>WAI</abbr> site redesign</a>,
+        <abbr title="Web Accessibility Initiative Interest Group">WAI-IG</abbr> mailing list, 14 June 2016:
+        comments on what kind of data should or should not be collected through surveys.
+      </li>
     </ul>
 
     <h2>Stories Similar to Personas</h2>
