Settings table: solution ID commented out.

--- a/gpii/integrating-sublimetext.html
+++ b/gpii/integrating-sublimetext.html
@@ -22,8 +22,8 @@
 
     <h2 id="intro">Introduction</h2>
     <p>This document describes how you can integrate a dekstop application with <abbr>GPII</abbr>'s
-      real-time framework. The description uses the programming editor
-      <a href="http://www.sublimetext.com/">Sublime Text</a> (version 3) as an example.
+      real-time framework. The programming editor
+      <a href="http://www.sublimetext.com/">Sublime Text</a> (version 3 for Windows) is used as an example.
       For a general introduction to <abbr>GPII</abbr> and the integration process, see 
       <a href="gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>
       and the 
@@ -169,7 +169,7 @@
     <table id="settings-table">
       <thead>
         <tr>
-          <th scope="col">Solution <abbr>ID</abbr></th>
+          <!--th scope="col">Solution <abbr>ID</abbr></th-->
           <th scope="col">Setting</th>
           <th scope="col">Data type</th>
           <th scope="col">Value range</th>
@@ -181,7 +181,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>caret_extra_bottom</td>
           <td>Integer</td>
           <td>0 &hellip;</td>
@@ -191,7 +191,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>caret_extra_top</td>
           <td>Integer</td>
           <td>0 &hellip;</td>
@@ -201,7 +201,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>caret_extra_width</td>
           <td>Integer</td>
           <td>0 &hellip;</td>
@@ -211,7 +211,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>caret_style</td>
           <td>String</td>
           <td>"smooth", "phase", "blink" and "solid"</td>
@@ -221,7 +221,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>color_scheme</td>
           <td>String</td>
           <td>“Packages/Color Scheme - Default/Monokai.tmTheme”, “Packages/Color Scheme - Default/Amy.tmTheme”, <abbr>etc.</abbr></td>
@@ -231,7 +231,7 @@
           <td>(closest match: <code>highContrastEnabled</code> &amp; <code>highContrastTheme</code>)</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>dictionary</td>
           <td>String</td>
           <td>(path to a dictionary file on the file system)</td>
@@ -241,7 +241,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>fade_fold_buttons</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -251,7 +251,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>font_face</td>
           <td>String</td>
           <td>(depends on the fonts installed in the <abbr>OS</abbr>)</td>
@@ -261,7 +261,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>font_size</td>
           <td>Integer (pixels)</td>
           <td>(?)</td>
@@ -271,7 +271,7 @@
           <td><code>fontSize</code> (points)</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>gutter</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -281,7 +281,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>highlight_line</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -291,7 +291,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>highlight_modified_tabs</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -301,7 +301,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>line_numbers</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -311,7 +311,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>margin</td>
           <td>Integer</td>
           <td>(?)</td>
@@ -321,7 +321,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>show_encoding</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -331,7 +331,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>show_line_endings</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -341,7 +341,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>spell_check</td>
           <td>Boolean</td>
           <td>true | false</td>
@@ -351,7 +351,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>com.sublimetext</td>
+          <!--td>com.sublimetext</td-->
           <td>translate_tabs_to_spaces</td>
           <td>Boolean</td>
           <td>true | false</td>
