Python 3.x and node-gyp: incompatible.

--- a/gpii/integrating-sublimetext.html
+++ b/gpii/integrating-sublimetext.html
@@ -64,7 +64,8 @@
         After installing Python, go to the operating system's environment variables and
         add the Python directory to the <code>PATH</code> variable.
         (You can check your Python installation by typing <kbd>python --version</kbd> on the command line.
-        We have not checked whether Python 3.x also works.)
+        We have not checked whether Python 3.x also works.
+        However, <a href="https://www.npmjs.com/package/node-gyp">node-gyp</a> does not work with Python 3.x.)
       </li>
     </ul>
     <p>If you run into problems installing any of these dependencies, check the 
