--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -211,6 +211,18 @@
       </li>
     </ul>
 
+    <h2>Contrast / Colour Contrast</h2>
+    <ul>
+      <li>designworkplan:
+        <a href="http://designworkplan.com/design/signage-and-color-contrast.htm" lang="en-US">Color contrast</a>
+        (no date).
+      </li>
+      <li>Ryan Frederick: 
+        <a href="https://medium.com/shopify-ux/in-plain-sight-5639c9afb4c6">In Plain Sight: Text, Contrast, and Accessibility</a>,
+        <i class="site">Medium</i>, June 2016.
+      </li>
+    </ul>
+    
   </main>
 
   <footer>
