WAI Redesign Personas.

--- a/personas.html
+++ b/personas.html
@@ -38,6 +38,10 @@
       on the <abbr>GPII</abbr> wiki.
     </p>
     <ul>
+      <li>The persona Patricia Clark in the
+        <a href="https://w3c.github.io/wai-website-personas/"><abbr>WAI</abbr> Redesign Personas</a>
+        (2016).
+      </li>
       <li>Personas created by the 
         <a href="http://www.aegis-project.eu/index.php?option=com_content&view=article&id=63&Itemid=53">AEGIS project</a>
         (2008-2012).
