Updated links for WAI-ARIA practices.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -83,13 +83,9 @@
       </li>
       <li>
         <a href="https://www.w3.org/TR/wai-aria-practices-1.1/"><strong><abbr>WAI-ARIA</abbr> Authoring Practices 1.1</strong></a> 
-        (under development).
-      </li>
-      <li>
-        <a href="http://www.w3.org/WAI/PF/aria-practices/"><strong><abbr>WAI-ARIA</abbr> 1.0 Authoring Practices:
-        An author's guide to understanding and implementing Accessible Rich Internet Applications</strong></a>
-        (working draft of 
-        <a href="https://www.w3.org/TR/wai-aria-practices/"><strong><abbr>WAI-ARIA</abbr> 1.0 Authoring Practices</strong>).
+        (under development) explains how to use <abbr>WAI-ARIA</abbr> to create accessible rich internet applications.
+        <br />Note: <abbr>WAI-ARIA</abbr> 1.0 Authoring Practices was retired in July 2016.
+        (<a href="http://www.w3.org/WAI/PF/aria-practices/">This draft</a> is no longer relevant.)
       </li>
       <li><abbr>AOL</abbr> Access: 
         <a href="http://access.aol.com/dhtml-style-guide-working-group/">
