Herin Hentry's article on WCAG.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -79,6 +79,10 @@
             summaries of the guidelines for
             <q>Webmasters who may have some knowledge of HTML or programming</q>.
           </li>
+          <li>Herin Hentry: 
+            <a href="https://www.linkedin.com/pulse/wcag-scary-anymore-progressive-approach-website-herin-hentry"><abbr>WCAG</abbr> is not scary anymore - A progressive approach to Website Accessibility</a>,
+            LinkedIn Pulse, 25.07.2016. 
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
