MDN Web app accessibility overview (minor edit).

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -71,7 +71,7 @@
       </li>
       <li>
         <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/An_overview_of_accessible_web_applications_and_widgets">An overview of accessible web applications and widgets</a>,
-        <i>Mozilla Developer Network (<abbr>MDN</abbr>)</i> (resource under development).
+        <i class="website">Mozilla Developer Network (<abbr>MDN</abbr>)</i>.
       </li>
     </ul>
 
