--- a/elearning.html
+++ b/elearning.html
@@ -167,6 +167,8 @@
     <!-- See also on ResearchGate:
       * "How can we make Massive Open Online Courses (MOOC) courses suitable for deaf? " https://www.researchgate.net/post/How_can_we_make_Massive_Open_Online_Courses_MOOC_courses_suitable_for_deaf
       * "How do blind students access MOOCs?" https://www.researchgate.net/post/How_do_blind_students_access_MOOCs 
+      Elsewhere:
+      * Journal of Online Learning and Teaching (JOLT): http://jolt.merlot.org/index.html 
     -->
 
     <h2 id="moocsona11y"><abbr title="massive open online courses">MOOCs</abbr> About Accessibility</h2>
@@ -176,12 +178,14 @@
     <ul>
       <li>
         <a href="https://www.futurelearn.com/courses/education-for-all">Education for All: Disability, Diversity and Inclusion</a>
-        by the University of Cape Town is a 6-week course on FutureLearn.
+        by the University of Cape Town is a 6-week course on FutureLearn. It requires roughly 3 hours of study per week.
+        The most recent session started on 19 September 2016.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/thinking-through-disability">Disability and a Good Life: Thinking through Disability</a>
-        by the University of New South Wales (<abbr>UNSW</abbr>) is a 6-week course on FutureLearn.
+        by the University of New South Wales (<abbr>UNSW</abbr>) is a 6-week course on FutureLearn. It requires roughly 5 hours of study per week.
         (This course is not about <abbr>ICT</abbr> accessibility.)
+        The next session starts on 24 October 2016. 
       </li>
       <li>
         <a href="https://opencourses.desire2learn.com/cat/course/web-accessibility-7195/">Web Accessibility <abbr>MOOC</abbr> for Online Educators</a>
@@ -194,16 +198,19 @@
       </li>
       <li>
         <a href="https://www.edx.org/course/information-communication-technology-ict-ict100x">Information and Communication Technology (<abbr>ICT</abbr>) Accessibility</a>
-        is a 6-week course by the Georgia Institute of Technology (Georgia Tech) hosted on edX (start date 29.02.2016).
+        is a 6-week course by the Georgia Institute of Technology (Georgia Tech) hosted on edX. The course requires 2 to 4 hours of study per week.
+        The latest session started on 29.02.2016, but the course is now available as a self-paced course.
       </li>
+      <!-- 
       <li>
         <a href="https://www.coursera.org/course/digitalaccessibility">Information and Communication Technology (<abbr>ICT</abbr>) Accessibility</a>
-        is the same course as above but hosted on Coursera.
+        was the same course as above but hosted on Coursera. This course is no longer available on Coursera.
       </li>
+      -->
       <li>
         <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-3">Web Accessibility <abbr>MOOC</abbr> for Educators</a>
         is a three-week course by the Colorado Community College System (<abbr>CCCS</abbr>) hosted on Canvas.
-        It most recently ran in February-March 2016 and is scheduled to run again 
+        It most recently ran in February-March 2016 and again 
         <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-4">from 18 April to 8 May 2016</a>. 
       </li>
       <li>
@@ -213,7 +220,24 @@
       <li>
         <a href="https://openeducation.blackboard.com/mooc-catalog/courseDetails/view?course_id=_74_1">Perspectives on Disability </a>
         is a 10-week course by Northern Illinois University hosted on Blackboard Learn.
-        The course first ran in 2014. 
+        The course first ran in 2014 and is now available as a self-paced course. 
+      </li>
+      <li>
+        <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">Accessibilité Numérique</a>
+        is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
+        The course starts on 7 November 2016 and runs for five weeks.
+        (See also the 
+        <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
+        on <span lang="fr">Echosciences Grenoble</span>.)
+      </li>
+      <li>
+        <a href="https://www.udacity.com/course/web-accessibility--ud891">Web Accessibility</a>
+        is a two-week <abbr>MOOC</abbr> by Google on Udacity.
+      </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
+        is a 4-week course on Taipei Medical University, hosted on FutureLearn.
+        The course starts on 17 October 2016.
       </li>
     </ul>
 
