Faulkner: ARIA in HTML (2014).

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -73,6 +73,10 @@
         <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/An_overview_of_accessible_web_applications_and_widgets">An overview of accessible web applications and widgets</a>,
         <i class="website">Mozilla Developer Network (<abbr>MDN</abbr>)</i>.
       </li>
+      <li>Faulkner, Steve:
+        <a href="https://html5doctor.com/using-aria-in-html/">Using <abbr>ARIA</abbr> in <abbr>HTML</abbr></a>
+        (21.06.2014).
+      </li>
     </ul>
 
     <h2>Standards and References</h2>
