--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -206,6 +206,16 @@
       </li>
     </ul>
 
+    <h2>Journal Articles</h2>
+    <ul>
+      <li>Ossmann, Roland; Miesenberger, Klaus:
+        <a href="https://www.researchgate.net/publication/221010368_Guidelines_for_the_Development_of_Accessible_Computer_Games">Guidelines for the Development of Accessible Computer Games</a>.
+        Proceedings of Computers Helping People with Special Needs, 10th International Conference, ICCHP 2006, Linz, Austria, July 11-13, 2006.
+        Lecture Notes in Computer Science. Springer, 2006.
+        <!-- @@download -->
+      </li>
+    </ul>
+
   </main>
 
   <footer>
