Web Accessibility Auditing MOOC on Canvas.

--- a/elearning.html
+++ b/elearning.html
@@ -235,9 +235,16 @@
         is a two-week <abbr>MOOC</abbr> by Google on Udacity.
       </li>
       <li>
+      </li>
+      <li>
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
-        is a 4-week course on Taipei Medical University, hosted on FutureLearn.
+        is a 4-week course by Taipei Medical University, hosted on FutureLearn.
         The course starts on 17 October 2016.
+      </li>
+      <li>
+        <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
+        is a 4-week course by Ryerson University, hosted on Canvas.
+        The course starts on 14 November and requires 3-5 hours of study per week.
       </li>
     </ul>
 
