New section: dyslexia.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -84,6 +84,24 @@
       </li>
     </ul>
 
+    <h2>Dyslexia</h2>
+    <ul>
+      <li>
+        <a href="http://www.calmlywriter.com/">Calmly Writer</a>:
+        online tool.
+        <!-- not primarily for people with dyslexia -->
+      </li>
+      <li>Taylor, Julia: 
+        <a href="https://www.jisc.ac.uk/blog/how-technology-can-help-dyslexic-learners-help-themselves-05-nov-2015">How technology can help dyslexic learners help themselves</a>,
+        <i class="blog"><abbr>JISC</abbr> blog</i>, 05.11.2015. 
+      </li>
+      <!-- @@check https://duckduckgo.com/?q=%22open+source%22+software+dyslexia&ia=web -->
+      <!-- 
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
 
   </main>
 
