--- a/elearning.html
+++ b/elearning.html
@@ -25,6 +25,7 @@
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
@@ -248,51 +249,9 @@
       </li>
     </ul>
 
-    <h2>Document Accessibility</h2>
-    <p>Note: this section will probably move to a separate page.</p>
-    <ul>
-      <li>Accessible Digital Office Document (<abbr>ADOD</abbr>) Project:
-        <a href="http://adod.idrc.ocad.ca/">Accessibility of Office Documents and Office Applications</a>:
-        website with authoring techniques for Microsoft Word, Google Docs, iWork Pages, LibreOffice Writer,
-        Microsoft Excel, OpenOffice Calc, Microsoft PowerPoint, OpenOffice Impress
-        and several other applications.
-      </li>
-      <!-- 
-        * "Hpw I use Libreoffice for adaptive typing" (by crippledcritic / Robert Kingett, who has cerebral palsy): https://www.youtube.com/watch?v=wXEavIjNovQ 
-        * PhraseExpress (Text expander for Windows: http://www.phraseexpress.com/ 
-          ** Freeware - 30-day trial: http://www.phraseexpress.com/freeware.htm 
-          ** See alternatives at http://alternativeto.net/software/textexpander/?license=free 
-          *** e.g. Texter (for Windows, written in AutoHotkey scripting language): https://github.com/adampash/texter 
-        * Jurgen Gaeremyn: "Creating a fillable PDF form using LibreOffice Writer" (15 minutes): https://www.youtube.com/watch?v=fC1g7tT997w
-          ** Issue with two sets of radio buttons (each in a table row): in Foxit Reader, the two sets of radio buttons behave as if they were a single set. Is this a bug in Foxit Reader (test in Adobe Reader) or in PDF form export?
-          ** Is this accessible??
-      -->
-      <li>Accede <abbr>PDF</abbr> Project:
-        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
-        (English translation of
-        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
-        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
-        you can even download a practice document.
-      </li>
-      <li>Microsoft in Government:
-        <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
-        YouTube playlist consisting of 10 short videos.
-        The videos cover the following topics: document naming, headings and styles, lists,
-        columns, tables, languages, links, alt text, and joining the accessibility community.
-        <br />See also 
-        <a href="https://www.microsoft.com/enable/products/office2010/default.aspx">Accessibility in Microsoft Office 2010</a>
-        and
-        <a href="https://www.microsoft.com/enable/products/office2013/default.aspx">Accessibility in Microsoft Office 2013</a>
-        on the Microsoft Accessibility website.
-      </li>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PLmfVOnJxeSEXsEKv2i20nYMHYuFEcl4fO">Metzessible <abbr title="Portable Document Format: Universal Accessibility">PDF/UA</abbr> Series</a>:
-        YouTube playlist about accessible <abbr>PDF</abbr>.
-        <a href="https://en.wikipedia.org/wiki/PDF/UA"><abbr>PDF/UA</abbr></a>
-        is the informal name for
-        <a href="http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=64599">ISO 14289</a>.
-      </li>
-    </ul>
+    <p>Note: the section on document accessibility has been moved to a 
+      <a href="contentaccessibility.html">separate page</a>.
+    </p>
   </main>
 
   <footer>
