--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -25,6 +25,7 @@
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
@@ -351,6 +352,12 @@
       </li>
     </ul>
 
+  <!-- Validation: check:
+    * https://validator.github.io/validator/#build-instructions 
+    * https://github.com/validator/validator 
+    * https://github.com/unsoup/validator 
+    * https://netbeans.org/kb/docs/webclient/html5-gettingstarted.html 
+  -->
   </main>
 
   <footer>
