Robson's TEDx talk about closed captioning.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -126,6 +126,10 @@
         <a href="http://www.3playmedia.com/resources/research-studies/student-uses-of-closed-captions-and-transcripts/">National Research Study: Student Uses and Perceptions of Closed Captions &amp; Transcripts</a>.
         <!-- @@download study -->
       </li>
+      <li>Robson, Gary:
+        <a href="https://www.youtube.com/watch?v=oiZ42KUsxGo">Does closed captioning still serve deaf people?</a>,
+        <abbr>TEDx</abbr>Bozeman, May 2014 (10 minutes, YouTube).
+      </li>
       <li>Clark, Joe:
         <a href="http://joeclark.org/access/captioning/">Captioning</a>
         (links to Joe Clark's writing about captioning; not updated since 2007).
@@ -151,6 +155,10 @@
       <li><a href=""></a>
       </li>
     </ul>
+    -->
+    <!-- 
+      * Project Naptha: http://projectnaptha.com/ : OCR in the browser, using Tesseract
+      * Tesseract: Open Source OCR Engine: https://github.com/tesseract-ocr/tesseract (Licence: Apache 2.0; plus other liberal licence for Leptonica).
     -->
 
 
