MOOC on MiriadaX.
MOOC "Discapacidad y envejecimiento activos. Soportes tecnológicos" on
MiriadaX.

--- a/elearning.html
+++ b/elearning.html
@@ -247,6 +247,12 @@
         is a 4-week course by Ryerson University, hosted on Canvas.
         The course starts on 14 November and requires 3-5 hours of study per week.
       </li>
+      <li>
+        <a href="https://miriadax.net/web/discapacidad-y-envejecimiento-activos-soportes-tecnologicos" hreflang="es" lang="es">Discapacidad y envejecimiento activos. Soportes tecnológicos</a>
+        (Disability and active ageing)
+        is an 11-week course by the <span lang="es">Universidad Complutense Madrid</span> on MiriadaX.
+        The course will start in January.
+      </li>
     </ul>
 
     <p>Note: the section on document accessibility has been moved to a 
