--- a/elearning.html
+++ b/elearning.html
@@ -186,7 +186,7 @@
         <a href="https://www.futurelearn.com/courses/thinking-through-disability">Disability and a Good Life: Thinking through Disability</a>
         by the University of New South Wales (<abbr>UNSW</abbr>) is a 6-week course on FutureLearn. It requires roughly 5 hours of study per week.
         (This course is not about <abbr>ICT</abbr> accessibility.)
-        The next session starts on 24 October 2016. 
+        The latest session started on 24 October 2016. 
       </li>
       <li>
         <a href="https://opencourses.desire2learn.com/cat/course/web-accessibility-7195/">Web Accessibility <abbr>MOOC</abbr> for Online Educators</a>
@@ -236,11 +236,18 @@
         is a two-week <abbr>MOOC</abbr> by Google on Udacity.
       </li>
       <li>
-      </li>
-      <li>
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
         is a 4-week course by Taipei Medical University, hosted on FutureLearn.
-        The course starts on 17 October 2016.
+        The course started on 17 October 2016.
+      </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
+        is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
+        and that runs on FutureLearn.
+        The first run of the course started on 17 October 2016.
+        <br />The <abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)
+        will provide a number of 
+        <a href="http://gpii.eu/moocap/?page_id=655">further courses</a> in 2017.
       </li>
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
