--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
 
   <footer>
     <p id="licence">
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-    <img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
-    </a>
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
     <br />
     <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text">
     <a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
@@ -116,9 +114,6 @@
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
     Attribution-ShareAlike 4.0 International License</a>. </p>
-    
-    <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
-    the code</a> on GitHub.</p>
   </footer>
 </body>
 </html>
