--- a/elearning.html
+++ b/elearning.html
@@ -238,13 +238,15 @@
       <li>
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
         is a 4-week course by Taipei Medical University, hosted on FutureLearn.
-        The course started on 17 October 2016.
+        The course started on 17 October 2016 and ended on 13 November;
+        the next run has not been announced yet.  
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that runs on FutureLearn.
-        The first run of the course started on 17 October 2016.
+        The first run of the course started on 17 October 2016 and ended on 20 November 2016; 
+        the next run will start on 6 February 2017.
         <br />The <abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)
         will provide a number of 
         <a href="http://gpii.eu/moocap/?page_id=655">further courses</a> in 2017.
@@ -252,13 +254,13 @@
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
-        The course starts on 14 November and requires 3-5 hours of study per week.
+        The latest run of the course starten on 14 November and requires 3-5 hours of study per week.
       </li>
       <li>
         <a href="https://miriadax.net/web/discapacidad-y-envejecimiento-activos-soportes-tecnologicos" hreflang="es" lang="es">Discapacidad y envejecimiento activos. Soportes tecnológicos</a>
         (Disability and active ageing)
         is an 11-week course by the <span lang="es">Universidad Complutense Madrid</span> on MiriadaX.
-        The course will start in January.
+        The course will start in January 2017.
       </li>
     </ul>
 
