Minor edits (updates).

--- a/elearning.html
+++ b/elearning.html
@@ -226,7 +226,7 @@
       <li>
         <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">Accessibilité Numérique</a>
         is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
-        The course starts on 7 November 2016 and runs for five weeks.
+        The course started on 7 November 2016 and runs for five weeks.
         (See also the 
         <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
         on <span lang="fr">Echosciences Grenoble</span>.)
@@ -254,7 +254,7 @@
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
-        The latest run of the course starten on 14 November and requires 3-5 hours of study per week.
+        The latest run of the course started on 14 November and requires 3-5 hours of study per week.
       </li>
       <li>
         <a href="https://miriadax.net/web/discapacidad-y-envejecimiento-activos-soportes-tecnologicos" hreflang="es" lang="es">Discapacidad y envejecimiento activos. Soportes tecnológicos</a>
@@ -282,10 +282,7 @@
     rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-    Attribution-ShareAlike 4.0 International License</a>. </p>
-    
-    <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork
-    the code</a> on GitHub.</p>
+    Attribution-ShareAlike 4.0 International License</a>.</p>
   </footer>
 </body>
 </html>
