Minor edit (link to GitHub repo removed).

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -85,6 +85,7 @@
             LinkedIn Pulse, 25.07.2016. 
           </li>
         </ul>
+        <!-- Trace R&D Center: Page Author Guidelines - Version 8: Unified Web Site Accessibility Guidelines: January 1998: https://www.w3.org/WAI/GL/author.htm -->
       </li>
       <li><abbr>W3C</abbr>:
         <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
