Subtitle Edit (open source tool).

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -102,6 +102,10 @@
     <h2>Audio and Video</h2>
     <h3>Captioning / Subtitles for the Hard of Hearing</h3>
     <ul>
+      <li>Olsson, Nikolaj Lynge (nikse.dk):
+        <a href="http://nikse.dk/SubtitleEdit/">Subtitle Edit</a>:
+        open source editor for video subtitles.
+      </li>
       <li>Mikul, Chris:
         <a href="http://www.accessiq.org/create/content/tools-for-captioning-online-videos">Tools for captioning online videos</a>,
         <i class="website">Access <abbr>IQ</abbr></i>, 05.10.2012.
