Various minor updates.

--- a/elearning.html
+++ b/elearning.html
@@ -58,7 +58,7 @@
       </li>
     </ul>
 
-    <h2>Pojects and Initiatives</h2>
+    <h2>Projects and Initiatives</h2>
     <ul>
       <li>
         <a href="https://www.w3.org/community/accesslearn/">Accessible Online Learning Community Group</a>
@@ -180,13 +180,13 @@
       <li>
         <a href="https://www.futurelearn.com/courses/education-for-all">Education for All: Disability, Diversity and Inclusion</a>
         by the University of Cape Town is a 6-week course on FutureLearn. It requires roughly 3 hours of study per week.
-        The most recent session started on 19 September 2016.
+        The most recent session started on 19 September 2016. The next run has not been announced yet.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/thinking-through-disability">Disability and a Good Life: Thinking through Disability</a>
         by the University of New South Wales (<abbr>UNSW</abbr>) is a 6-week course on FutureLearn. It requires roughly 5 hours of study per week.
         (This course is not about <abbr>ICT</abbr> accessibility.)
-        The latest session started on 24 October 2016. 
+        The latest session started on 24 October 2016. The next run has not been announced yet.
       </li>
       <li>
         <a href="https://opencourses.desire2learn.com/cat/course/web-accessibility-7195/">Web Accessibility <abbr>MOOC</abbr> for Online Educators</a>
@@ -217,6 +217,7 @@
       <li>
         <a href="https://www.canvas.net/browse/empirestate/empirestate-buffalostate/courses/accessibility-designing-teaching">Accessibility: Designing and Teaching Courses for All Learners</a>
         is a six-week course by State University of New York (<abbr>SUNY</abbr>) hosted on Canvas (22.02 - 04.04.2016).
+        The course is now available as a self-paced course.
       </li>
       <li>
         <a href="https://openeducation.blackboard.com/mooc-catalog/courseDetails/view?course_id=_74_1">Perspectives on Disability </a>
