--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -145,6 +145,9 @@
         https://www.futurelearn.com/courses/digital-accessibility/1/comments/17624800
     -->
     <ul>
+      <li><a href="http://youdescribe.org/">YouDescribe</a>:
+        a free online tool for adding audio description to YouTube videos.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=EKGOWavFvHc">We're The Superhumans | Rio Paralympics 2016 Trailer</a>:
         audio-described video by Channel 4. (Captions can also be activated.
