--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         especially toolkits and platforms for developing 
         <abbr class="assistive technology">AT</abbr>.
       </li>
+      <li><a href="contentaccessibility.html">Content Accessibility</a>.
+      </li>
       <li><a href="tts.html">Text-to-speech software</a>.
       </li>
       <li><abbr title="General Public Inclusive Infrastucture">GPII</abbr>:
