YouDescribe: instructions, Rodas article.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -141,12 +141,21 @@
     </ul>
 
     <h3>Audio Description</h3>
-    <!-- Audio description can also be helpful for autistic people: "utistic friends say it's helpful as they can't decode faces/body language." 
+    <!-- Audio description can also be helpful for autistic people: "autistic friends say it's helpful as they can't decode faces/body language." 
         https://www.futurelearn.com/courses/digital-accessibility/1/comments/17624800
     -->
     <ul>
       <li><a href="http://youdescribe.org/">YouDescribe</a>:
         a free online tool for adding audio description to YouTube videos.
+      </li>
+      <li>Media Access Australia:
+        <a href="http://www.mediaaccess.org.au/web/how-to-audio-describe-a-youtube-video">How to Audio Describe a YouTube Video</a>:
+        short instructions for using YouDescribe.
+      </li>
+      <li>Rodas, Julia Miele:
+        <a href="https://jitp.commons.gc.cuny.edu/youdescribe-testing-crowd-sourced-video-description-for-service-learning-at-the-city-university-of-new-york/">YouDescribe: Testing Crowd-sourced Video Description for Service Learning at the City University of New York</a>,
+        <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
+        <!-- @@todo read! -->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=EKGOWavFvHc">We're The Superhumans | Rio Paralympics 2016 Trailer</a>:
