Updated link@rel attribute for alternate CSS.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Mobile Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
