--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>GPII/Cloud4all for Developers</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/stuttgartbib.css" title="default" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
