--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
   <!-- See quick intro to GitHub pages at https://pages.github.com/ -->
   <!-- See also https://help.github.com/articles/user-organization-and-project-pages/ -->
 </head>
