Vision Australia: Accessible YouTube.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -123,6 +123,12 @@
       </li>
       <li><a href="http://dotsub.com/">dotSUB</a>
       </li>
+      <li>Vision Australia:
+        <a href="http://www.visionaustralia.org/digital-access-youtube">Accessible YouTube player</a>.
+        (Vision Australia used to offer an accessible <abbr>HTML</abbr>-based alternative to
+        YouTube's Flash-based video player. However, since YouTube now uses a player
+        based on <abbr>HTML</abbr>5, the accessible alternative is now obsolete.)
+      </li>
       <li><a href="http://nomorecraptions.com/">NoMoreCraptions</a>
         (open-source project that provides an alternative to YouTube's automatic captions,
         which are dubbed &ldquo;craptions&rdquo;).
